I think I added the 1.03 songs properly

--- a/app/templates/completion.html
+++ b/app/templates/completion.html
@@ -12,40 +12,5 @@
   {% endblock %}
 </head>
 {% block body %}
-<div style="padding: 5pt">
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#worldMusic" aria-expanded="false" aria-controls="worldMusic">
-    World Music
-  </button>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#original" aria-expanded="false" aria-controls="original">
-    Original
-  </button>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#kPop" aria-expanded="false" aria-controls="kPop">
-    K-Pop
-  </button>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#jMusic" aria-expanded="false" aria-controls="jMusic">
-    J-Music
-  </button>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#xross" aria-expanded="false" aria-controls="xross">
-    Xross
-  </button>
-</div>
-<div>
-  <div class="collapse content-section" id="worldMusic">
-    {% for score in scores.items %}
-      hello
-    {% endfor %}
-  </div>
-  <div class="collapse" id="original">
-
-  </div>
-  <div class="collapse" id="kPop">
-
-  </div>
-  <div class="collapse" id="jMusic">
-
-  </div>
-  <div class="collapse" id="xross">
-
-  </div>
-</div>
+lol idk what to do for this yet
 {% endblock %}
