--- a/app/templates/completion.html
+++ b/app/templates/completion.html
@@ -12,5 +12,167 @@
   {% endblock %}
 </head>
 {% block body %}
-lol idk what to do for this yet
+<div class="jumbotron">
+  <div class="card">
+    <div class="card-header">
+      <h5>Singles</h5>
+    </div>
+    <div class="card-body">
+      <table class="table table-striped table-dark">
+        <tr>
+          <th>Difficulty</th>
+          <th>Completed</th>
+        </tr>
+        {% for i in range(25) %}
+          <tr>
+            <td>
+              <img src="{{ url_for('static', filename='diffballs/S{}.png'.format(i+1)) }}">
+            </td>
+            <td>
+              {{ completion['singles'][i+1] }}
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h5>Doubles</h5>
+    </div>
+    <div class="card-body">
+      <table class="table table-striped table-dark">
+        <tr>
+          <th>Difficulty</th>
+          <th>Completed</th>
+        </tr>
+        {% for i in range(27) %}
+          <tr>
+            <td>
+              <img src="{{ url_for('static', filename='diffballs/D{}.png'.format(i+1)) }}">
+            </td>
+            <td>
+              {{ completion['singles'][i+1] }}
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h5>Co-Op</h5>
+    </div>
+    <div class="card-body">
+      <table class="table table-striped table-dark">
+        <tr>
+          <th>Difficulty</th>
+          <th>Completed</th>
+        </tr>
+        {% for i in range(1, 5) %}
+          <tr>
+            <td>
+              <img src="{{ url_for('static', filename='diffballs/Co-Op{}.png'.format(i+1)) }}">
+            </td>
+            <td>
+              {{ completion['singles'][i+1] }}
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h5>Single Performance</h5>
+    </div>
+    <div class="card-body">
+      <table class="table table-striped table-dark">
+        <tr>
+          <th>Difficulty</th>
+          <th>Completed</th>
+        </tr>
+        {% for i in [1, 2, 3, 4, 5, 6, 10, 15] %}
+          <tr>
+            <td>
+              <img src="{{ url_for('static', filename='diffballs/SP{}.png'.format(i)) }}">
+            </td>
+            <td>
+              {{ completion['singles'][i+1] }}
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h5>Double Performance</h5>
+    </div>
+    <div class="card-body">
+      <table class="table table-striped table-dark">
+        <tr>
+          <th>Difficulty</th>
+          <th>Completed</th>
+        </tr>
+        {% for i in ['01','1','2','3','4','5','6','7','8','11','15','20'] %}
+          <tr>
+            <td>
+              <img src="{{ url_for('static', filename='diffballs/DP{}.png'.format(i)) }}">
+            </td>
+            <td>
+              {{ completion['singles'][i] }}
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h5>Half Double</h5>
+    </div>
+    <div class="card-body">
+      <table class="table table-striped table-dark">
+        <tr>
+          <th>Difficulty</th>
+          <th>Completed</th>
+        </tr>
+        {% for i in ['2','3','4','5','6','7','8','9','10','11','12','13','14','15','16','17','18','19','21','22','23'] %}
+          <tr>
+            <td>
+              <img src="{{ url_for('static', filename='diffballs/HD{}.png'.format(i)) }}">
+            </td>
+            <td>
+              {{ completion['singles'][i] }}
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h5>Routine</h5>
+    </div>
+    <div class="card-body">
+      <table class="table table-striped table-dark">
+        <tr>
+          <th>Difficulty</th>
+          <th>Completed</th>
+        </tr>
+        {% for i in ['01','5','6','7','9','10','11','12','13','14','15','16','17','18','19','20','21','22','23','27'] %}
+          <tr>
+            <td>
+              <img src="{{ url_for('static', filename='diffballs/RT{}.png'.format(i)) }}">
+            </td>
+            <td>
+              {{ completion['singles'][i] }}
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
+</div>
 {% endblock %}
