--- a/app/templates/new_score.html
+++ b/app/templates/new_score.html
@@ -145,24 +145,26 @@
     </form>
   </div>
   <script>
-    data = {{ songdata | tojson | safe }}
-    var diffDrop = document.getElementById("difficultyDropdown");
-    var song = document.getElementById("songDropdown");
+    function init() {
+      data = {{ songdata | tojson | safe }}
+      var diffDrop = document.getElementById("difficultyDropdown");
+      var song = document.getElementById("songDropdown");
 
-    updateSelectedSong();
+      updateSelectedSong();
 
-    function updateSelectedSong() {
-      diffDrop.options.length = 0;
+      function updateSelectedSong() {
+        diffDrop.options.length = 0;
 
-      var strSong = song.options[song.selectedIndex].value;
-      var diffs = data[strSong]["difficulties"];
+        var strSong = song.options[song.selectedIndex].value;
+        var diffs = data[strSong]["difficulties"];
 
-      for(var i=0; i < diffs.length; i++) {
-        var option = document.createElement("OPTION"),
-          txt = document.createTextNode(diffs[i]);
-        option.appendChild(txt);
-        option.setAttribute("value",diffs[i]);
-        diffDrop.insertBefore(option,diffDrop.lastChild);
+        for(var i=0; i < diffs.length; i++) {
+          var option = document.createElement("OPTION"),
+            txt = document.createTextNode(diffs[i]);
+          option.appendChild(txt);
+          option.setAttribute("value",diffs[i]);
+          diffDrop.insertBefore(option,diffDrop.lastChild);
+        }
       }
     }
   </script>
