--- a/app/static/main.css
+++ b/app/static/main.css
@@ -124,10 +124,15 @@ body {
 }
 
 .transition-fade {
-  transition: 0.4s;
+  transition: 0.4s ease;
   opacity: 1;
 }
 
 html.is-animating .transition-fade {
   opacity: 0;
+  transform: translateY(100pt);
+}
+
+html {
+  scroll-behavior: smooth;
 }
