--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -40,10 +40,16 @@
         {% include 'includes/_messages.html' %}
         {% block body %}{% endblock %}
       </div>
+      {% include 'includes/_footer.html' %}
     </main>
-    {% include 'includes/_footer.html' %}
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
     <script type="text/javascript">
+      window.scroll({
+        top: 0,
+        left: 0,
+        behavior: 'smooth'
+      });
+
       const swup = new Swup();
 
       init();
