--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -40,8 +40,10 @@
         {% include 'includes/_messages.html' %}
         {% block body %}{% endblock %}
       </div>
-      {% include 'includes/_footer.html' %}
     </main>
+    <div id="swup" class="transition-fade">
+      {% include 'includes/_footer.html' %}
+    </div>
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
     <script type="text/javascript">
       window.scroll({
