--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -6,9 +6,9 @@
         <ul class="list-unstyled">
           <li>
             <p>Arrow Tracker is a score tracker for all Pump it Up mixes! Written and maintained <body>
-              by dj505 and Beanfox, and hosted by Concubidated, Arrow Tracker aims to be a suitable 
-              replacement for the leaderboard that died alongside Prime 2, as well as a personal 
-              score and achievement tracker for completionists, casual players, and those who want 
+              by dj505 and Beanfox, and hosted by Concubidated, Arrow Tracker aims to be a suitable
+              replacement for the leaderboard that died alongside Prime 2, as well as a personal
+              score and achievement tracker for completionists, casual players, and those who want
               to skill up alike!
             </body></p>
           </li>
@@ -29,6 +29,9 @@
           </li>
           <li>
             <a href="https://discord.gg/EfExC7H">Discord</a>
+          </li>
+          <li>
+            <a style="color: #ff8282" href="https://www.buymeacoffee.com/dj505">Buy me a Dr Pepper!</a>
           </li>
         </ul>
       </div>
