--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -31,7 +31,7 @@
   <div>
     {% include 'includes/_coffee_button.html' %}
     <p class="legend" style="padding-top: 10pt">Arrow Tracker is completely free, open source, and will always be ad-free!<br \>
-    I hope you're enjoying the site, and any support would be greatly appreciated!</p>
+    I hope you're enjoying the site! Please consider donating if you find it useful (*≧▽≦)</p>
   </div>
 </div>
 {% if not current_user.is_authenticated %}
