--- a/app/templates/includes/_coffee_button.html
+++ b/app/templates/includes/_coffee_button.html
@@ -34,4 +34,8 @@
     opacity: 0.85 !important;color:#ffffff !important;
   }
 </style>
-<link href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet"><a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/dj505"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a Dr Pepper"><span style="margin-left:5px">Buy me a Dr Pepper</span></a>
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/dj505">
+  <img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a Dr Pepper // Support the Site">
+  <span style="margin-left:5px">Buy me a Dr Pepper // Support the Site</span>
+</a>
