--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -31,7 +31,7 @@
             <a href="https://discord.gg/EfExC7H">Discord</a>
           </li>
           <li>
-            <a style="color: #ff8282" href="https://www.buymeacoffee.com/dj505">Buy me a Dr Pepper!</a>
+            <a style="color: #ff8282" href="https://www.buymeacoffee.com/dj505">Buy me a Dr Pepper // Support the Site</a>
           </li>
         </ul>
       </div>
