Added a sidebar owo

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -36,7 +36,7 @@
   <body>
     {% include 'includes/_navbar.html' %}
     <main id="swup" class="transition-fade">
-      <div class="container animbg" style="padding: 20px">
+      <div class="container" style="padding: 20px">
         {% include 'includes/_messages.html' %}
         {% block body %}{% endblock %}
       </div>
