--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -128,6 +128,7 @@
       </article>
     {% endfor %}
     </div>
+    {% include 'includes/_sidebar.html' %}
     <ul class="pagination">
       {% for page_num in scores.iter_pages(left_edge=1, right_edge=1) %}
         {% if page_num %}
