--- a/app/templates/includes/_sidebar.html
+++ b/app/templates/includes/_sidebar.html
@@ -14,6 +14,9 @@
     <a href="/challenge/weekly">Weekly Challenge</a>
   </li>
   <li>
-    <a href="https://buymeacoff.ee/dj505">Support the Site</a>
+    <a href="https://discord.gg/EfExC7H" target="_blank">Report a Bug</a>
+  </li>
+  <li>
+    <a href="https://buymeacoff.ee/dj505" target="_blank">Support the Site</a>
   </li>
 </div>
