--- a/app/templates/includes/_sidebar.html
+++ b/app/templates/includes/_sidebar.html
@@ -8,6 +8,9 @@
     <a href="/members">Members</a>
   </li>
   <li>
+    <a href="/leaderboard/total">Total Leaderboard</a>
+  </li>
+  <li>
     <a href="/about">About Site</a>
   </li>
   <li>
