Fixed how sidebar looks on Chrome

--- a/app/templates/includes/_sidebar.html
+++ b/app/templates/includes/_sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidenav card animated fadeInRight fast" id="content-desktop">
+<div class="sidenav card animated fadeInRight fast list-unstyled" id="content-desktop">
   <h5>Quick Links</h5>
   <hr />
   <li>
