Replaced coffee links with new site

--- a/app/templates/includes/_sidebar.html
+++ b/app/templates/includes/_sidebar.html
@@ -20,6 +20,6 @@
     <a href="https://discord.gg/EfExC7H" target="_blank">Report a Bug</a>
   </li>
   <li>
-    <a href="https://buymeacoff.ee/dj505" target="_blank">Support the Site</a>
+    <a href="https://ko-fi.com/dj505piu" target="_blank">Support the Site</a>
   </li>
 </div>
