Changed coffee button to an image because js shenanigans

--- a/app/templates/includes/_coffee_button.html
+++ b/app/templates/includes/_coffee_button.html
@@ -1,1 +1,1 @@
-<script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support the Site!', '#696969', 'Y8Y8106HR');kofiwidget2.draw();</script> 
+<a href='https://ko-fi.com/Y8Y8106HR' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi1.png?v=2' border='0' alt='Support the site!' /></a>
