--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -6,7 +6,7 @@
         <ul class="list-unstyled">
           <li>
             <p>Arrow Tracker is a score tracker for all Pump it Up mixes! Written and maintained <body>
-              by dj505 and Beanfox, and hosted by Concubidated, Arrow Tracker aims to be a suitable
+              by dj505, Bedrock, and Beanfox, and hosted by Concubidated, Arrow Tracker aims to be a suitable
               replacement for the leaderboard that died alongside Prime 2, as well as a personal
               score and achievement tracker for completionists, casual players, and those who want
               to skill up alike!
