--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -49,8 +49,26 @@
         left: 0,
         behavior: 'smooth'
       });
-
       const swup = new Swup();
+      updateSelectedSong();
+      swup.on('contentReplaced', updateSelectedSong);
+      function updateSelectedSong() {
+        if (document.querySelector('#difficultyDropdown')) { //This checks if this element is on the the page (in the html)
+          data = {% if songdata %}{{ songdata | tojson | safe }}{% endif %}
+          var diffDrop = document.getElementById("difficultyDropdown");
+          var song = document.getElementById("songDropdown");
+          diffDrop.options.length = 0;
+          var strSong = song.options[song.selectedIndex].value;
+          var diffs = data[strSong]["difficulties"];
+          for(var i=0; i < diffs.length; i++) {
+            var option = document.createElement("OPTION"),
+              txt = document.createTextNode(diffs[i]);
+            option.appendChild(txt);
+            option.setAttribute("value",diffs[i]);
+            diffDrop.insertBefore(option,diffDrop.lastChild);
+          }
+        }
+      }
     </script>
   </body>
 </html>
