--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -55,7 +55,7 @@
       </div>
     </div>
   </div>
-  <div class="footer-copyright text-center py-3">© 2019 Copyright:
-    <a href="https://github.com/dj505/arrowtracker">dj505</a>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://github.com/dj505/arrowtracker">dj505, sugoku</a>
   </div>
 </footer>
